# XG3Badminton

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLATFORM_STATE.md  config.py  main.py  pyproject.toml  railway.json  requirements.txt
agents/: agent_runtime.py  auto_pricer.py  live_supervisor.py  monitoring_supervisor.py  orchestrator.py  outright_supervisor.py  pre_match_supervisor.py  sgp_supervisor.py  trading_supervisor.py
api/: derivatives.py  fixtures.py  form.py  h2h.py  metrics.py  predict.py  routes.py  settlement.py  sgp.py  trader_overrides.py  trading_controls.py
badminton_platform/: __init__.py  badminton_pricer.py
betting/: __init__.py  bet_processor.py  bet_validator.py
config/: __init__.py  badminton_config.py
core/: bayesian_updater.py  doubles_rotation.py  environment_adjuster.py  markov_engine.py  match_state.py  momentum_detector.py  rwp_calculator.py  scoring_engine.py
data/: elo_seed_badminton.json
feed/: bwf_rankings_client.py  entity_mapper.py  feed_health_monitor.py  flashscore_client.py  id_registry.py  optic_odds_client.py  pinnacle_client.py
markets/: derivative_engine.py  live_markets.py  margin_engine.py  market_trading_control.py  outright_pricing.py  pre_match_markets.py  sgp_engine.py
ml/: calibrate.py  calibrator.py  data_loader.py  elo_startup_seeder.py  elo_system.py  ensemble.py  evaluate.py  feature_engineering.py  feature_engineering_v2.py  features.py  inference.py  predictor.py  regime_gate.py  serve_stat_db.py  train.py  trainer.py  weekly_rankings_db.py
monitoring/: prometheus.yml
(+90 files in other folders)
